# learn-lambda-custom-image

./: .editorconfig  .gitignore  README.md  pyproject.toml
app/: README.md  samconfig.toml  template.yaml
app/.aws-sam/: build.toml
app/image_magick/: Dockerfile  app.py
app/tests/unit/: test_handler.py
